--- a/css/wooder.css
+++ b/css/wooder.css
@@ -19,11 +19,23 @@ div {
     margin: 0;
 }
 
+footer {
+    background-color: black;
+    width: 100%;
+    /* height: 80px; */
+    color: white;
+    padding: 15px 0;
+    font-size: 15px;
+    position: absolute;
+    z-index: 30;
+}
+
 .container-fluid{
     max-width: 100%;
     padding-left: 30px;
     padding-right: 30px;
 }
+
 
 a {
     padding: 0;
@@ -84,6 +96,10 @@ img {
     padding: 0;
     margin: 0;
 }
+main .slider{
+    position: relative;
+    z-index: 500;
+}
 main .slider .slider__images .slider__images-item {
     display: flex;
     flex-direction: column;
@@ -95,6 +111,7 @@ main .slider .slider__images .slider__images-item .text {
 	Left: 50%;
 	Transform: translate(-50%, -50%);
     position: absolute;
+    z-index: 1;
 }
 
 main .slider .slider__images .slider__images-item .text h2{
@@ -115,4 +132,24 @@ main .slider .slider__images .slider__images-item .text .btn{
 
 main .slider .slider__images .slider__images-item .text .btn i {
     margin-left: 18px;
+}
+
+main .slider .slider__bottom .container-fluid {
+    position: absolute;
+    z-index: 2;
+}
+
+main .slider .slider__bottom .container-fluid .pading{
+    display: flex;
+    flex-direction: row;
+
+}
+
+/* ------------------------------- 
+    Footer
+*/
+
+footer .container {
+    display: flex;
+    justify-content: space-evenly;
 }
