--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -1,7 +1,7 @@
 //  color
 
 // background
-
+$yellow-bg: #bea67c;
 // text color
 
 //============================================================//
