--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -14,9 +14,9 @@ header {
         justify-content: space-between;
         align-items: center;
     
-        .logo{
+        // .logo{
 
-        }
+        // }
         .menu{
             display: flex;
             margin: 0;
