--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,53 +1,5 @@
 // Header
-header {
-    background-color: black;
-    width: 100%;
-    /* height: 80px; */
-    color: white;
-    padding: 15px 0;
-    font-size: 15px;
-    z-index: 30;
 
-    .container-fluid {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    
-        // .logo{
-
-        // }
-        .menu{
-            display: flex;
-            margin: 0;
-            padding: 0;
-            padding-left: 60px;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            li{
-                list-style: none;
-                a{
-                    color: white;
-                    text-decoration: none;
-                    margin: 10px 10px;
-                }
-            }
-        }
-        .right{
-
-            .lang{
-                &__current{
-
-                }
-                .lang__current{
-                    
-                }
-            }
-        }
-        
-    }
-  }
 
 /* ------------------------------- 
     Main
@@ -61,7 +13,7 @@ img {
   
   main .slider {
     position: relative;
-    z-index: 500;
+    z-index: 99;
   
     .slider__images .slider__images-item {
       display: flex;
@@ -76,9 +28,11 @@ img {
         z-index: 1;
   
         h2 {
+          font-family: pb;
           font-size: 83.33px;
           color: #bea67c;
           margin: 50px 0;
+          letter-spacing: 15px;
         }
   
         .btn {
