--- a/scss/core/_mixins.scss
+++ b/scss/core/_mixins.scss
@@ -5,3 +5,9 @@
 	color: $color;
 	text-transform: $text-transform;
 }
+
+@mixin midflex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
