--- a/scss/core/_mixins.scss
+++ b/scss/core/_mixins.scss
@@ -11,3 +11,9 @@
     align-items: center;
     justify-content: center;
 }
+
+@mixin midtrans {
+	top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
