--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -5,47 +5,44 @@
     Main
 */
 
-img {
-    max-width: 100vw;
-    padding: 0;
-    margin: 0;
-  }
+
   
   main .slider {
-    position: relative;
-    z-index: 99;
-  
     .slider__images .slider__images-item {
       display: flex;
       flex-direction: column;
       position: relative;
-  
+      img {
+        max-width: 100vw;
+        padding: 0;
+        margin: 0;
+      }
       .text {
-        Top: 50%;
-        Left: 50%;
-        Transform: translate(-50%, -50%);
+        @include midtrans;
         position: absolute;
-        z-index: 1;
+        z-index: 98;
   
         h2 {
           font-family: pb;
-          font-size: 200px;
+          font-size: 88.33px;
           color: #bea67c;
           margin: 50px 0;
           letter-spacing: 15px;
+          position: relative;
         }
   
         .btn {
+          display: inline;
           text-decoration: none;
           color: #ffffff;
           padding: 15px 50px;
-          Top: 50%;
-          Left: 50%;
-          Transform: translate(-50%, -50%);
-          border-style: solid;
-  
+          @include midtrans;  
+          border: solid #fff;
+          position: absolute;
+          font-size: 12px;
+          
           i {
-            margin-left: 18px;
+            margin-left: 1s8px;
           }
         }
       }
