--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -1,9 +1,25 @@
-//  color
+// primary color
 $yellow-cl: #bea67c;
-// background
-$yellow-bg: #bea67c;
-// text color
+$white-cl: #fff;
+$black-cl: #0e0e0e;
 
+// background
+$main-bg-cl: #fff;
+$black-bg-cl: $black-cl;
+
+// text color
+$text-cl: #464646;
+$text-black-cl: #000000;
+
+// Timing transition
+$t: 0.4s;
+
+// Size font type
+$fz-text: 16px;
+$lh-text: 22px;
+
+$fz-text-m: 16px;
+$lh-text-m: 22px;
 //============================================================//
 
 /*BOXED LAYOUT*/
