--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,60 +1,164 @@
-// Header
-
 
 /* ------------------------------- 
     Main
 */
-
-
-  
-  main .slider {
-    .slider__images .slider__images-item {
-      display: flex;
-      flex-direction: column;
+.slider{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  &__images{
+    width: 100%;
+    height: 100%;
+    &-item{
+      width: 100%;
+      height: 100%;
       position: relative;
-      img {
-        max-width: 100vw;
-        padding: 0;
-        margin: 0;
-      }
-      .text {
-        @include midtrans;
-        position: absolute;
-        z-index: 98;
-  
-        h2 {
+      .text{
+        @include mid;
+        z-index: 100;
+        h2{
+          font-size: 84px;
+          text-transform: uppercase;
           font-family: pb;
-          font-size: 88.33px;
-          color: #bea67c;
-          margin: 50px 0;
-          letter-spacing: 15px;
-          position: relative;
+          letter-spacing: 20px;
+          color: $yellow-cl;
+          margin: 45px 0;
         }
-  
-        .btn {
-          display: inline;
-          text-decoration: none;
-          color: #ffffff;
+        .btn{
+          border: 1px solid $white-cl;
+          text-transform: uppercase;
+          text-decoration: none; 
+          color: $white-cl;
+          width: max-content;
           padding: 15px 50px;
-          @include midtrans;  
-          border: solid #fff;
+          letter-spacing: 5px;
+          display: flex;
+          margin: 0 auto;
+          position: relative;
+          @include transition($t);
+          i{
+            margin-left: 15px;
+          }
+          span{
+            position: relative;
+            z-index: 20;
+          }
+        }
+        .btn:before{
+          content: "";
+          width: 100%;
+          height: 100%;
+          background: $yellow-cl;
           position: absolute;
-          font-size: 12px;
+          top: 0;
+          left: 0;
+          display: block;
           
-          i {
-            margin-left: 1s8px;
+          @include transition(transform $t);
+          @include transform(scaleX(0));
+          @include transform-origin(right);
+        }
+        .btn:hover:before{
+          background: $yellow-cl;
+          @include transition(transform $t);
+          @include transform(scaleX(1));
+          @include transform-origin(left);
+        }
+      }
+      .banner{
+        @include midimg(initial);
+      }
+    }
+  }
+  &__bottom {
+    width: 100%;
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    .container-fluid{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .paging{
+      display: flex;
+      align-items: center;
+      span{
+        font-size: 48px;
+        color: $yellow-cl;
+        font-family: pb;
+        line-height: normal;
+        display: flex;
+        align-items: center;
+        &:before{
+          content: "";
+          width: 42px;
+          height: 4px;
+          background: $yellow-cl;
+          margin-right: 12px;
+          display: inline-block;
+        }
+      }
+      ul{
+        margin-left: 15px;
+        li{
+          width: 10px;
+          height: 10px;
+          background: $white-cl;
+          @include br(50%);
+          opacity: 0.5;
+          margin-right: 12px;
+          display: inline-block;
+          cursor: pointer;
+          flex-shrink: 0;
+          @include transform($t);
+          &:hover,
+          &.active{
+            background-color: $yellow-cl;
+            opacity: 1;
+            @include transform($t);
           }
         }
       }
     }
-  
-    .slider__bottom .container-fluid {
+    .mouse{
       position: absolute;
-      z-index: 2;
-  
-      .pading {
-        display: flex;
-        flex-direction: row;
+      left: 50%;
+      bottom: 15px;
+      @include transform(translateX(-50%));
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      img{
+        &:first-child{
+          width: 20px;
+          margin-bottom: 12px;
+        }
+      &__down{
+          @include animation(mymove 5s initial);
+
+          @include keyframes(mymove){
+            from {top: 0px};
+            to {top: 5px};
+          }
+        }
+      }
+    }  
+  }
+    .control{
+      display: flex;
+      &__btn{
+        border: 1px solid $white-cl;
+        padding: 15px 15px;
+        cursor: pointer;
+        &:last-child{
+          border-left: 0;
+        }
+        &:hover{
+          background: $yellow-cl;
+          @include transition($t);
+        }
       }
     }
   }
