--- a/scss/core/_layouts.scss
+++ b/scss/core/_layouts.scss
@@ -18,6 +18,17 @@ body {
     background: #fff;
     position: relative;
     scroll-behavior: smooth;
+    --pdsection: 90px;
+    main{
+        width: 100%;
+        margin: auto;
+        overflow: hidden;
+        section{
+            &.pd{
+                padding: var(--pdsection);
+            }
+        }
+    }
 
     .container-fluid {
         padding-right: 30px;
