--- a/scss/core/_mixins.scss
+++ b/scss/core/_mixins.scss
@@ -8,49 +8,49 @@
 
 // MIXINS
 // large desktop
-@mixin lg {
+@mixin desktopLg {
 	@media screen and (max-width: $lg-max) {
 		@content;
 	}
 }
 // desktop
-@mixin md {
+@mixin desktop {
 	@media screen and (max-width: $md-max) {
 		@content;
 	}
 }
 // tablet
-@mixin sm {
+@mixin tablet {
 	@media screen and (max-width: $sm-max) {
 		@content;
 	}
 }
 // mobile
-@mixin xs {
+@mixin mobile {
 	@media screen and (max-width: $xs-max) {
 		@content;
 	}
 }
 // small mobile
-@mixin xxs {
+@mixin mobileSm {
 	@media (max-width: $xxs-max) {
 		@content;
 	}
 }
 // desktop landscape
-@mixin mdX {
+@mixin desktopLc {
 	@media screen and (max-width: $md-max) and (orientation: landscape) {
 		@content;
 	}
 }
 // tablet landscape
-@mixin smX {
+@mixin tabletLc {
 	@media screen and (max-width: $sm-max) and (orientation: landscape) {
 		@content;
 	}
 }
 // mobile landscape
-@mixin xsX {
+@mixin mobileLc {
 	@media screen and (max-width: $xs-max) and (orientation: landscape) {
 		@content;
 	}
