--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -2,6 +2,7 @@
 /* ------------------------------- 
     Main
 */
+// Component Silder
 .slider{
   width: 100%;
   height: 100vh;
@@ -145,7 +146,6 @@
         }
       }
     }  
-  }
     .control{
       display: flex;
       &__btn{
@@ -162,3 +162,38 @@
       }
     }
   }
+}
+
+// Component Product
+.product{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  .container{
+    width: 100%;
+    height: 100%;
+  }
+  &__list{
+    width: 100%;
+    height: 100%;
+    
+    &-content{
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding-bottom: var(--pdsection);
+    }
+  }
+}
+
+// Component Background
+
+// Component About
+
+// Component Gallery
+
+// Component News
+
+// Component Image move
