--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -7,6 +7,8 @@
   width: 100%;
   height: 100vh;
   position: relative;
+  --fztitle: 84px;
+  --pdborder: 15px 50px;
   &__images{
     width: 100%;
     height: 100%;
@@ -18,7 +20,7 @@
         @include mid;
         z-index: 100;
         h2{
-          font-size: 84px;
+          font-size: var(--fztitle);
           text-transform: uppercase;
           font-family: pb;
           letter-spacing: 20px;
@@ -31,7 +33,7 @@
           text-decoration: none; 
           color: $white-cl;
           width: max-content;
-          padding: 15px 50px;
+          padding: var(--pdborder);
           letter-spacing: 5px;
           display: flex;
           margin: 0 auto;
@@ -40,33 +42,32 @@
           i{
             margin-left: 15px;
           }
-          span{
-            position: relative;
-            z-index: 20;
+          &:before{
+            content: "";
+            width: 100%;
+            height: 100%;
+            background: $yellow-cl;
+            position: absolute;
+            z-index: -1;
+            top: 0;
+            left: 0;
+            display: block;
+            
+            @include transition(transform $t);
+            @include transform(scaleX(0));
+            @include transform-origin(right);
           }
-        }
-        .btn:before{
-          content: "";
-          width: 100%;
-          height: 100%;
-          background: $yellow-cl;
-          position: absolute;
-          top: 0;
-          left: 0;
-          display: block;
-          
-          @include transition(transform $t);
-          @include transform(scaleX(0));
-          @include transform-origin(right);
-        }
-        .btn:hover:before{
-          background: $yellow-cl;
-          @include transition(transform $t);
-          @include transform(scaleX(1));
-          @include transform-origin(left);
-        }
+          &:hover:before{
+            background: $yellow-cl;
+            @include transition(transform $t);
+            @include transform(scaleX(1));
+            @include transform-origin(left);
+          }
+        }     
       }
       .banner{
+        height: 100%;
+        width: 100%;
         @include midimg(initial);
       }
     }
@@ -136,12 +137,20 @@
           width: 20px;
           margin-bottom: 12px;
         }
+      }
       &__down{
-          @include animation(mymove 5s initial);
+        @include animation(mymove 1s ease forwards infinite);
 
-          @include keyframes(mymove){
-            from {top: 0px};
-            to {top: 5px};
+        @include keyframes(mymove){
+          0%{
+            @include transform(translateY(0px));
+            opacity: 0;
+            @include transition($t);
+          }
+          100%{
+            @include transform(translateY(18px));
+            opacity: 1;
+            @include transition($t);
           }
         }
       }
@@ -160,6 +169,112 @@
           @include transition($t);
         }
       }
+    }
+  }
+}
+
+@include tablet{
+  .slider{
+   height: 600px;
+   &__bottom{
+     .mouse{
+       &__img{
+         display: none;
+       }
+     }
+   }
+  }
+}
+
+@include mobile {
+  .slider{
+    height: 600px;
+    --fztitle: 60px;
+    --pdborder: 10px 20px;
+    &__images{
+      &-item{
+        .text{
+          h2{
+            letter-spacing: 10px;
+            margin: initial;
+          }
+          .btn{
+            top: 25px;
+            span{
+              font-size: 14px;
+              letter-spacing: 3px;
+            }
+          }
+        }
+      }
+    }
+    &__bottom{
+      .paging{
+        display: flex;
+        align-items: center;
+        span{
+          font-size: 30px;
+          color: $yellow-cl;
+          font-family: pb;
+          line-height: normal;
+          display: flex;
+          align-items: center;
+          &:before{
+            display: none;
+          }
+        }
+        ul{
+          margin-left: 10px;
+          li{
+            width: 8px;
+            height: 8px;
+            background: $white-cl;
+            @include br(50%);
+            opacity: 0.5;
+            margin-right: 5px;
+            display: inline-block;
+            cursor: pointer;
+            flex-shrink: 0;
+            @include transform($t);
+            &:hover,
+            &.active{
+              background-color: $yellow-cl;
+              opacity: 1;
+              @include transform($t);
+            }
+          }
+        }
+      }
+      .mouse{
+        position: absolute;
+        left: 50%;
+        bottom: 15px;
+        // @include transform(translateX(-50%));
+        // display: flex;
+        // align-items: center;
+        // flex-direction: column;
+        justify-content: center;
+        img{
+          &:first-child{
+            display: none;
+          }
+        }
+      }
+      .control{
+        display: flex;
+        &__btn{
+          border: 1px solid $white-cl;
+          padding: 10px 10px;
+          cursor: pointer;
+          &:last-child{
+            border-left: 0;
+          }
+          &:hover{
+            background: $yellow-cl;
+            @include transition($t);
+          }
+        }
+      }  
     }
   }
 }
@@ -184,6 +299,9 @@
       flex-direction: row;
       align-items: center;
       padding-bottom: var(--pdsection);
+      &.--decor{
+        @include transform(rotate(0deg));
+      }
     }
   }
 }
