--- a/scss/core/_elements.scss
+++ b/scss/core/_elements.scss
@@ -1,44 +1,74 @@
-// img {
-//     max-width: 100%;
-// }
-.textbox{
-    h2{
-      @include text($fz-title, pb, $lh-title, $text-black-cl, uppercase);
-      display: flex;
-      align-items: center;
-      &::before{
-        content: "";
-        width: 80px;
-        height: 1px;
-        margin-right: 20px;
-        background: $line-cl;
-        display: block;
-      }
-    } 
-    span{
-      font-size: $fz-text;
-      line-height: $lh-text;
-      color: $text-cl;
-      margin-bottom: 38px;
-      margin-left: 100px;
-      margin-right: 60px;
-      display: block;
-    }
-    a{
-      text-decoration: none;
-      color: $text-black-cl;
-      text-transform: uppercase;
-      font-family: pb;
-      margin-left: 100px;
-      letter-spacing: 3px;
-      &::after{
-          content: "";
-          width: 40px;
-          height: 1px;
-          margin-top: 7px;
-          margin-left: 100px;
-          background: $yellow-cl;
-          display: block;
-      }
-    } 
+img {
+    max-width: 100%;
+}
+.btnmain{
+  border: 1px solid $white-cl;
+  text-transform: uppercase;
+  text-decoration: none; 
+  color: $white-cl;
+  width: max-content;
+  padding: var(--pdborder);
+  letter-spacing: 5px;
+  display: flex;
+  margin: 0 auto;
+  position: relative;
+  @include transition($t);
+  i{
+    margin-left: 15px;
   }
+  &:before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: $yellow-cl;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    display: block;
+    
+    @include transition(transform $t);
+    @include transform(scaleX(0));
+    @include transform-origin(right);
+  }
+  &:hover:before{
+    background: $yellow-cl;
+    @include transition(transform $t);
+    @include transform(scaleX(1));
+    @include transform-origin(left);
+  }
+}
+
+.btnmore{
+    text-decoration: none;
+    display: inline-flex;
+    color: $text-black-cl;
+    text-transform: uppercase;
+    font-family: pb;
+    letter-spacing: 3px;
+    position: relative;
+    opacity: 1;
+    @include transition($t);
+    &::after{
+        content: "";
+        width: 40px;
+        height: 1px;
+        background: $yellow-cl;
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+    }
+    img{
+      margin-left: 10px;
+      width: 40px;
+    }
+    &:hover span{
+      opacity: 0.6;
+      @include transition($t);
+    }
+    &:hover img{
+        margin-left: 18px;
+        @include transition($t);
+        opacity: 1;
+    }
+}
