--- a/scss/core/_elements.scss
+++ b/scss/core/_elements.scss
@@ -1,5 +1,6 @@
 img {
     max-width: 100%;
+    max-height: 100%;
 }
 .btnmain{
   border: 1px solid $white-cl;
@@ -47,6 +48,7 @@ img {
     font-family: pb;
     letter-spacing: 3px;
     position: relative;
+    margin-bottom: 30px;
     opacity: 1;
     @include transition($t);
     &::after{
