--- a/scss/core/_layouts.scss
+++ b/scss/core/_layouts.scss
@@ -25,8 +25,11 @@ body {
         overflow: hidden;
         section{
             &.pd{
-                padding: var(--pdsection);
+                padding: var(--pdsection) 0;
             }
+        }
+        @include mobile{
+            --pdsection: 60px;
         }
     }
 
